--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zxteam/sql.postgres",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
@@ -17,19 +17,19 @@
 	],
 	"license": "MIT",
 	"devDependencies": {
-		"@types/chai-datetime": "0.0.31",
-		"@zxnode/build": "0.0.32",
-		"@zxteam/ensure.js": "^1.0.0",
+		"@types/chai-datetime": "^0.0.31",
+		"@zxnode/build": "^0.0.33",
+		"@zxteam/ensure.js": "^1.2.0",
 		"chai-datetime": "^1.5.0"
 	},
 	"dependencies": {
 		"@types/pg": "^7.4.14",
-		"@zxteam/contract": "^3.2.1",
-		"@zxteam/contract.sql": "^3.0.2",
-		"@zxteam/disposable": "^3.0.2",
-		"@zxteam/financial.js": "^3.0.3",
+		"@zxteam/contract": "^3.2.4",
+		"@zxteam/contract.sql": "^3.2.4",
+		"@zxteam/disposable": "^3.2.2",
+		"@zxteam/financial.js": "^3.2.1",
 		"pg": "^7.9.0",
-		"ptask.js": "^3.0.2"
+		"ptask.js": "^3.2.1"
 	},
 	"keywords": [
 		"zx",
@@ -51,7 +51,7 @@
 		"build": "zxbuild clean dist",
 		"test:local": "env TEST_DB_URL=\"postgres://\" mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
 		"test": "mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
-		"prepare:initdb": "scripts/init-test-db.sh"
+		"prepare:devdb": "scripts/init-test-db.sh"
 	},
 	"private": true
 }
