--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
 	"name": "@zxteam/sql.postgres",
-	"version": "0.0.3",
+	"version": "5.0.0",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
 	"author": {
-		"name": "Maxim Anurin",
-		"email": "maxim.anurin@zxteam.org",
-		"url": "http://www.anurin.name"
+		"name": "ZXTeam",
+		"email": "pub@project.zxteam.org",
+		"url": "http://www.zxteam.org"
 	},
 	"contributors": [
+		{
+			"name": "Maxim Anurin",
+			"email": "maxim.anurin@zxteam.org",
+			"url": "http://www.anurin.name"
+		},
 		{
 			"name": "Serhii Zghama",
 			"email": "serhii.zghama@zxteam.org"
@@ -18,18 +23,18 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/chai-datetime": "^0.0.31",
-		"@zxnode/build": "^0.0.33",
+		"@zxnode/build": "^0.0.34",
 		"@zxteam/ensure.js": "^1.2.0",
 		"chai-datetime": "^1.5.0"
 	},
 	"dependencies": {
 		"@types/pg": "^7.4.14",
-		"@zxteam/contract": "^3.2.4",
-		"@zxteam/contract.sql": "^3.2.6",
-		"@zxteam/disposable": "^3.2.2",
-		"@zxteam/financial.js": "^3.2.1",
-		"pg": "^7.9.0",
-		"ptask.js": "^3.2.1"
+		"@zxteam/contract": "^5.0.0",
+		"@zxteam/contract.sql": "^5.0.0",
+		"@zxteam/disposable": "^4.0.2",
+		"@zxteam/financial.js": "^5.0.5",
+		"@zxteam/task": "^4.0.0",
+		"pg": "^7.9.0"
 	},
 	"keywords": [
 		"zx",
