Update sources to latest contract

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
-include: 'https://dev.zxteam.net/maxim.anurin/gitlab-pipelines/raw/master/node/internal-lib.yml'
+include: 'http://dev.zxteam.net/maxim.anurin/gitlab-pipelines/raw/master/node/internal-lib.yml'
 
-image: registry.dev.zxteam.net/pub/docker/build/node10.protoc-mysqlcli-psqlcli:1
+image: docker.registry.zxteam.net/pub/docker/build/node10.protoc-mysqlcli-psqlcli:1
 
 cache:
   paths:
@@ -14,7 +14,7 @@ test:
     GIT_STRATEGY: none
     TEST_DB_URL: 'postgres://devtest@postgres:5432/emptytestdb'
   services:
-    - name: registry.dev.zxteam.net/pub/docker/test/postgres10:1
+    - name: docker.registry.zxteam.net/pub/docker/test/postgres10:1
       alias: postgres
   before_script:
     - npm run prepare:devdb
