--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-	"name": "@zxteam/sql.postgres",
-	"version": "5.0.0",
+	"name": "@zxteam/sql-postgres",
+	"version": "6.0.35",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
 	"author": {
 		"name": "ZXTeam",
-		"email": "pub@project.zxteam.org",
-		"url": "http://www.zxteam.org"
+		"email": "pub@zxteam.org",
+		"url": "https://www.zxteam.org"
 	},
 	"contributors": [
 		{
 			"name": "Maxim Anurin",
 			"email": "maxim.anurin@zxteam.org",
-			"url": "http://www.anurin.name"
+			"url": "https://www.anurin.name"
 		},
 		{
 			"name": "Serhii Zghama",
@@ -21,37 +21,36 @@
 		}
 	],
 	"license": "MIT",
-	"devDependencies": {
-		"@types/chai-datetime": "^0.0.31",
-		"@zxnode/build": "^0.0.34",
-		"@zxteam/ensure.js": "^1.2.0",
-		"chai-datetime": "^1.5.0"
-	},
-	"dependencies": {
-		"@types/pg": "^7.4.14",
-		"@zxteam/contract": "^5.0.0",
-		"@zxteam/contract.sql": "^5.0.0",
-		"@zxteam/disposable": "^4.0.2",
-		"@zxteam/financial.js": "^5.0.5",
-		"@zxteam/task": "^4.0.0",
-		"pg": "^7.9.0"
-	},
 	"keywords": [
-		"zx",
 		"zxteam",
-		"library",
-		"reusable",
 		"sql",
 		"postgres"
 	],
+	"devDependencies": {
+		"@types/chai-datetime": "^0.0.33",
+		"@types/lodash": "^4.14.149",
+		"@zxnode/build": "^0.0.34",
+		"@zxteam/ensure": "^6.0.23",
+		"chai-datetime": "^1.5.0"
+	},
+	"dependencies": {
+		"@types/pg": "^7.11.2",
+		"@zxteam/contract": "^6.0.35",
+		"@zxteam/disposable": "^6.0.23",
+		"@zxteam/errors": "^6.0.33",
+		"@zxteam/financial": "^6.0.21",
+		"@zxteam/sql": "^6.0.35",
+		"lodash": "^4.17.15",
+		"pg": "^7.14.0"
+	},
 	"repository": {
 		"type": "git",
-		"url": "ssh://git@dev.zxteam.net:22282/pub/node/sql.postgres.git"
+		"url": "https://github.com/zxteamorg/node.sql-postgres.git"
 	},
 	"bugs": {
-		"url": "https://dev.zxteam.net/pub/node/sql.postgres/issues"
+		"url": "https://github.com/zxteamorg/node.sql-postgres/issues"
 	},
-	"homepage": "https://dev.zxteam.net/pub/node/sql.postgres#readme",
+	"homepage": "https://github.com/zxteamorg/node-postgres.sql",
 	"scripts": {
 		"build": "zxbuild clean dist",
 		"test:local": "env TEST_DB_URL=\"postgres://\" mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
