Just add README to build

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zxteam/sql-postgres",
-	"version": "6.0.35",
+	"version": "6.0.36",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
@@ -52,7 +52,7 @@
 	},
 	"homepage": "https://github.com/zxteamorg/node-postgres.sql",
 	"scripts": {
-		"build": "zxbuild clean dist",
+		"build": "zxbuild clean dist && cp README.md .dist/",
 		"test:local": "env TEST_DB_URL=\"postgres://\" mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
 		"test": "mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
 		"prepare:devdb": "scripts/init-test-db.sh"
