--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zxteam/sql-postgres",
-	"version": "6.0.38",
+	"version": "6.0.40",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
@@ -35,11 +35,12 @@
 	},
 	"dependencies": {
 		"@types/pg": "^7.11.2",
+		"@zxteam/cancellation": "^6.0.25",
 		"@zxteam/contract": "^6.0.35",
 		"@zxteam/disposable": "^6.0.23",
 		"@zxteam/errors": "^6.0.33",
 		"@zxteam/financial": "^6.0.36",
-		"@zxteam/sql": "^6.0.38",
+		"@zxteam/sql": "^6.0.40",
 		"lodash": "^4.17.15",
 		"pg": "^7.14.0"
 	},
