--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,6 +25,23 @@
 				"TEST_DB_URL": "postgres://"
 			},
 			"sourceMaps": true
+		},
+		{
+			"name": "broken-connection.longrun",
+			"type": "node",
+			"runtimeArgs": [
+				"--require",
+				"source-map-support/register",
+			],
+			"request": "launch",
+			"preLaunchTask": "compile:test:ts",
+			"cwd": "${workspaceRoot}",
+			"env": {
+				"NODE_ENV": "development",
+				"LOG_LEVEL": "trace"
+			},
+			"envFile": "${workspaceFolder}/.env",
+			"program": "${workspaceRoot}/test/broken-connection.longrun.js"
 		}
 	]
 }
