--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,7 @@ cache:
   paths:
     - node_modules/
 
-test:
+test-unit:
   stage: test
   image: docker.registry.zxteam.net/pub/docker/build/node10.protoc-mysqlcli-psqlcli:1
   dependencies:
