--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zxteam/sql-postgres",
-	"version": "6.0.43",
+	"version": "6.0.44",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
@@ -57,7 +57,7 @@
 	"scripts": {
 		"build": "zxbuild clean dist && cp README.md .dist/",
 		"test:local": "env TEST_DB_URL=\"postgres://\" mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
-		"test": "mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
+		"test": "nyc --exclude submodules --exclude test --extension=\".ts\" --reporter=lcov --reporter=text --reporter=text-summary mocha --require source-map-support/register --recursive \"test/**/*.test.js\"",
 		"prepare:devdb": "scripts/init-test-db.sh"
 	},
 	"private": true
