--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,24 +11,13 @@ test-unit:
     - compile
   variables:
     GIT_STRATEGY: none
-    TEST_DB_URL: 'postgres://devtest@postgres:5432/emptytestdb'
+    TEST_DB_URL: 'postgres://devtest@postgres-unit:5432/emptytestdb'
+    TEST_MIGRATION_DB_URL: 'postgres://postgres@postgres-migration:5432/emptytestdb'
   services:
     - name: docker.registry.zxteam.net/pub/docker/test/postgres10:1
-      alias: postgres
+      alias: postgres-unit
+    - name: docker.registry.zxteam.net/pub/docker/test/postgres10:1
+      alias: postgres-migration
   script:
     - npm run prepare:devdb
-    - npm run test
-
-test-migration:
-  stage: test
-  image: docker.registry.zxteam.net/pub/docker/build/node10.protoc-mysqlcli-psqlcli:1
-  dependencies:
-    - compile
-  variables:
-    GIT_STRATEGY: none
-    TEST_MIGRATION_DB_URL: 'postgres://postgres@postgres:5432/emptytestdb'
-  services:
-    - name: docker.registry.zxteam.net/pub/docker/test/postgres10:1
-      alias: postgres
-  script:
     - npm run test
