Add defaultSchema to opts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,31 +22,7 @@
 			],
 			"env": {
 				"NODE_ENV": "development",
-				"TEST_DB_URL": "postgres://"
-			},
-			"sourceMaps": true
-		},
-		{
-			"name": "Tests Migration",
-			"type": "node",
-			"request": "launch",
-			"preLaunchTask": "compile:test:ts",
-			"runtimeExecutable": null,
-			"runtimeArgs": [
-				"--nolazy",
-				"--require",
-				"source-map-support/register"
-			],
-			"stopOnEntry": false,
-			"program": "${workspaceRoot}/node_modules/mocha/bin/_mocha",
-			"args": [
-				"--no-timeouts",
-				"--colors",
-				"--debug-brk",
-				"test/**/*.test.js"
-			],
-			"env": {
-				"NODE_ENV": "development",
+				"TEST_DB_URL": "postgres://",
 				"TEST_MIGRATION_DB_URL": "postgres://"
 			},
 			"sourceMaps": true
