--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zxteam/sql-postgres",
-	"version": "6.0.60",
+	"version": "6.0.63",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
@@ -27,24 +27,24 @@
 		"postgres"
 	],
 	"devDependencies": {
-		"@types/chai-datetime": "^0.0.33",
-		"@types/lodash": "^4.14.149",
-		"@zxnode/build": "^0.0.34",
+		"@types/chai-datetime": "0.0.33",
+		"@types/lodash": "^4.14.157",
+		"@zxnode/build": "0.0.34",
 		"@zxteam/ensure": "^6.0.56",
 		"@zxteam/logger": "^6.0.40",
-		"chai-datetime": "^1.5.0",
-		"ts-node": "^8.6.2"
+		"chai-datetime": "^1.7.0",
+		"ts-node": "^8.10.2"
 	},
 	"dependencies": {
-		"@types/pg": "^7.14.1",
+		"@types/pg": "^7.14.3",
 		"@zxteam/cancellation": "^6.0.40",
-		"@zxteam/contract": "^6.0.60",
+		"@zxteam/contract": "^6.0.62",
 		"@zxteam/disposable": "^6.0.56",
-		"@zxteam/errors": "^6.0.57",
+		"@zxteam/errors": "^6.0.61",
 		"@zxteam/financial": "^6.0.56",
-		"@zxteam/sql": "^6.0.59",
+		"@zxteam/sql": "^6.0.65",
 		"lodash": "^4.17.15",
-		"pg": "^8.0.0"
+		"pg": "^8.2.1"
 	},
 	"repository": {
 		"type": "git",
