Workaround to issue with date convertsion as time switching from Standard to Summer time.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@zxteam/sql-postgres",
-	"version": "6.0.68",
+	"version": "6.0.69",
 	"description": "ZXTeam's SQL implementation for PostgreSQL",
 	"main": "./src/index.js",
 	"types": "./src/index.d.ts",
@@ -55,6 +55,7 @@
 	},
 	"homepage": "https://github.com/zxteamorg/node-postgres.sql",
 	"scripts": {
+		"clean": "find src \\( -name '*.js' -o -name '*.d.ts' -o -name '*.map' \\) -exec rm {} \\; ; find test \\( -name '*.js' -o -name '*.d.ts' -o -name '*.map' \\) -exec rm {} \\; ; find test-manual \\( -name '*.js' -o -name '*.d.ts' -o -name '*.map' \\) -exec rm {} \\;",
 		"build": "zxbuild clean dist && cp README.md .dist/",
 		"test:local": "env TEST_DB_URL=\"postgres://\" mocha --require source-map-support/register --timeout 20000 --recursive \"test/**/*.test.js\"",
 		"test": "nyc --exclude submodules --exclude test --extension=\".ts\" --reporter=lcov --reporter=text --reporter=text-summary mocha --require source-map-support/register --timeout 20000 --recursive \"test/**/*.test.js\""
